// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CiteAllAction renders with disabled 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={true}
    items={
      Array [
        Object {
          "key": "application/x-bibtex",
          "label": <span>
            BibTeX
          </span>,
        },
        Object {
          "key": "application/vnd+inspire.latex.eu+x-latex",
          "label": <span>
            LaTeX (EU)
          </span>,
        },
        Object {
          "key": "application/vnd+inspire.latex.us+x-latex",
          "label": <span>
            LaTeX (US)
          </span>,
        },
        Object {
          "key": "text/vnd+inspire.html+html",
          "label": <span>
            CV (html)
          </span>,
        },
      ]
    }
    onClick={[Function]}
    title={
      <Tooltip
        title="Only up to 1000 results can be exported."
      >
        <Button
          disabled={true}
          loading={false}
        >
          <IconText
            icon={<ExportOutlined />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  />
</UserActionWrapper>
`;

exports[`CiteAllAction renders with less than max citeable records results 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    items={
      Array [
        Object {
          "key": "application/x-bibtex",
          "label": <span>
            BibTeX
          </span>,
        },
        Object {
          "key": "application/vnd+inspire.latex.eu+x-latex",
          "label": <span>
            LaTeX (EU)
          </span>,
        },
        Object {
          "key": "application/vnd+inspire.latex.us+x-latex",
          "label": <span>
            LaTeX (US)
          </span>,
        },
        Object {
          "key": "text/vnd+inspire.html+html",
          "label": <span>
            CV (html)
          </span>,
        },
      ]
    }
    onClick={[Function]}
    title={
      <Tooltip
        title={null}
      >
        <Button
          disabled={false}
          loading={false}
        >
          <IconText
            icon={<ExportOutlined />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  />
</UserActionWrapper>
`;

exports[`CiteAllAction renders with loading 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    items={
      Array [
        Object {
          "key": "application/x-bibtex",
          "label": <span>
            BibTeX
          </span>,
        },
        Object {
          "key": "application/vnd+inspire.latex.eu+x-latex",
          "label": <span>
            LaTeX (EU)
          </span>,
        },
        Object {
          "key": "application/vnd+inspire.latex.us+x-latex",
          "label": <span>
            LaTeX (US)
          </span>,
        },
        Object {
          "key": "text/vnd+inspire.html+html",
          "label": <span>
            CV (html)
          </span>,
        },
      ]
    }
    onClick={[Function]}
    title={
      <Tooltip
        title={null}
      >
        <Button
          disabled={false}
          loading={true}
        >
          <IconText
            icon={<ExportOutlined />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  />
</UserActionWrapper>
`;
